--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+  
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<div id="content"></div>
 
+<script>
+    $.get('../README.md', function(response, status, xhr){
+        $("#content").html(marked(response));
+    });
+</script>
